[package]
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
readme = "README.md"
name = "lift-control"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.5"
embedded-hal = "0.2"
panic-halt = "0.2.0"
stm32f1 = { version = "0.9", features = ["stm32f103", "rt"] }
stm32f1xx-hal = { version = "0.5", features = ["stm32f103", "medium", "rt"] }

[[bin]]
name = "lift-control"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
